@@ -20,10 +20,10 @@ evaluate (const char * str, ACE_CString & result)
   const char * begin (str);
   const char * end (begin + ACE_OS::strlen (begin));
 
-  bool retval = boost::spirit::qi::phrase_parse (begin,
-                                                 end,
-                                                 grammar (&ostr),
-                                                 boost::spirit::qi::space);
+  bool retval = boost::spirit::qi::parse (begin,
+                                          end,
+                                          grammar,
+                                          ostr);
 
   if (retval)
     result = ostr.c_str ();
