@@ -1,3 +1,10 @@
+Tue Sep  2 19:12:02 UTC 2014  Dennis Feiock  <dfeiock at iupui dot edu>
+
+        * cuts/utils/Command_Substitution.h:
+        * cuts/utils/Command_Substitution.cpp:
+
+          Fixed grammar to make things easier to work with.  Thank James!
+
 Tue Sep  2 18:05:28 UTC 2014  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * cuts/utils/Command_Substitution.h:
